<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_frutiger_main"
    tools:context=".Operation">

    <TextView
        android:id="@+id/TextoOperacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text=""
        android:textColor="#000000"
        android:textSize="30sp"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:shadowColor="#8a6603"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/ivAtras"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:contentDescription="@string/exito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/textResumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumen"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:textColor="#000000"
        android:textSize="20sp"
        android:shadowColor="#8a6603"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <TextView
        android:id="@+id/textoSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text="@string/txt_saldo"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <TextView
        android:id="@+id/dato_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text=""
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <TextView
        android:id="@+id/Motivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text="@string/saldo_i"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/textoPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text="@string/producto_precio"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/dato_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text=""
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <ImageView
        android:id="@+id/iResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_notification_overlay" />

    <TextView
        android:id="@+id/textFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text="@string/saldo_f"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/dato_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#8a6603"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="1.8"
        android:text=""
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

</androidx.constraintlayout.widget.ConstraintLayout>